<resources>
    <string name="app_name">NotaDigital</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">Buat akun</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">last Name</string>
    <string name="et_hint_confirm_password">confirm password</string>
    <string name="i_agree_to_the_terms_and_condition">i agree to the <u>terms and condition</u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login"><u>Login</u></string>
    <string name="required">required</string>
    <string name="please_wait">Please Wait&#8230; </string>
    <string name="empty"> </string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you an email to reset your password  </string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_success">\"Email sent successfully to reset your password</string>
    <string name="register_success">You are registerd successfully</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage.You can also allow it from settings.</string>

    <string name="title_complete_profile">PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">SAVE</string>

    <string name="image_selection_failed">Failed to pick image</string>
    <string name="msg_profile_update_success">Your profile is updated successfully</string>







</resources>